[package]
name = "bb-cli"
description = "A Betty Blocks CLI"
version = "0.1.0"
authors = ["Enrique Bos <enrique.bos@bettyblocks.com>"]
repository = "https://github.com/Pandabweer/BettyBlocks"
license = "MIT"

edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
